SIP-7286: correctly align icons of toggle functionality on a single line in grid view

--- a/sip-web/src/app/common/components/chart-grid/chart-grid.component.scss
+++ b/sip-web/src/app/common/components/chart-grid/chart-grid.component.scss
@@ -11,7 +11,7 @@ $header-font-size: 18px;
     font-weight: normal;
     font-size: $header-font-size;
     margin-left: 16%;
-    width: 70%;
+    width: 55%;
   }
 
   .toggle-icons {
